Page layout completed

--- a/012/012.tex
+++ b/012/012.tex
@@ -219,85 +219,85 @@ anusarisilayavAguvudu. idakekx suSupitxyeMdu hesaru.
 sahoVvAca {\rm ---} -- yaterxYSa Etatf supotxV\s BU dayx ESa vijAcnxnamayaH
 \-puruSaH tadeVSAM pArxNAnAM vijAcnxneVna vijAcnxna mAdAya ya ESoV\s natx
 \-haqRdaya AkAsha satxsimxsheVteV eMba shurxtiya tAtapxyaR  {\rm ---}  {\rm ---} AvAga
-budidhx\-vijAcnxnadoDane iMdirxyagaLa bAhayxvasutxvina jAcnxnavanunx I
-vijAcnxnamaya (jiVva)nu sivxVkarisuvaneMdu I shurxtiya
-heVLuvudu. budidhxvijAcnxnavu (aMtaHkaraNada vaqtitxjAcnxnagaLu)
+budidhxvijAcnxna\-doDane iMdirxyagaLa bAhayxvasutxvina jAcnxnavanunx I
+vijAcnxnamaya (jiVva) nu sivxVkarisuvaneMdu I shurxtiya
+heVLuvudu. budidhxvijAcnxnavu (aMtaHkaraNada vaqtitx\-jAcnxnagaLu)
 upasaMhAravAdAga Atamxnige modalidadx
-vijAcnxnamayatavxvukaSxyisuvudu, adariMda niviRkAravAda
+vijAcnxnamayatavxvukaSxyi\-suvudu, adariMda niviRkAravAda
 savxrUpaceYtanayxvoMde uLiyuvudu. I tAtapxyaRdiMda Itanu oLage
-haqdayAkAshadalilx malagiruvaneMdu `sheVte'' eMbudariMda heVLiruvudu ||
+haqdayAkAshadalilx malagiruvaneMdu `sheVte'' eMbudariMda heVLiruvudu.
 \end{artha}
 
 \begin{artha}
 ililx haqdayAkAshaveMbudakekx budidhxyoLage parxkAshisuvaMtha
-AtamxceYtanayxveMdathaR, adanunx biTuTx horagina
-AkAshaveMdathaRvalalx. EkeMdare ! idariMdaleV parxgAtamxniMdale
+AtamxceYtanayx\break veMdathaR, adanunx biTuTx horagina
+AkAshaveMdathaRvalalx. EkeMdare ! ida\-riMdaleV parxgAtamxniMdale
 pArxNAdivasutxgaLu huTuTxtatxveyeMdu heVLuvudariMda adeV athaR, adu
 parabarxhamxveV, ideV elalxdakUkx aMtara (baLagiruvudu) ideV
 jiVvAtamxnige AdhAra, shariVrada oLagina matutx horaginakAyaRkAyaRgaLa
-huTiTxge kArANavAgide. `ya, E Sa:' eMdare- bAhayxvasutxgaLiruva
+huTiTxge kArANa\-vAgide. `ya, E Sa:' eMdare- bAhayxvasutxgaLiruva
 sAthxnagaLiMda manasusx edudx kuLitAga ananAyxnuBava
 (savxtaMtArxnuBava) rUpanAda I Atamxnu savxyaM parxtayxkaSxvAguvaneMdu
 aBipArxyadalilxde, `sheVte' eMdare -- jiVvAtamxnu I kAladalilx
 niviRkAra- matutx adivxtiVyavAda savxyaMpArxkAshavasutxvinalilx
-pUNaRvAgi nelesiruvaneMdathaR, vijAcnxnamaya jiVva
-alapxnAdavanu. paramAtatxnAgi uLiyuvanu, adu heVgeMdare ? GaTAkAshavu
-GaTavu oDeduhoVdare mahAkAshavAgiye uLiyuvaMte, budidhx vijAcnxnagaLu
-loVpavAdAga vijAcnxnamayanu savxsavxrUpavAda paramAtamxnAgi nilulxvanu
+pUNaRvAgi nelesiruvaneMdathaR, vijAcnxna\-maya jiVva
+alapxnAdavanu. paramAtatxnAgi uLiyuvanu, adu heVgeMdare? GaTAkAshavu
+GaTavu oDeduhoVdare mahAkAshavAgiye uLiyuvaMte, \-budidhx vijAcnxnagaLu
+loVpavAdAga vijAcnxnamayanu savxsavxrUpavAda paramAtamxnAgi nilulx\-vanu
 deVheVMdirxyAdigaLige sAkiSxyAgi jAgarAvasethxyalilx idadxrUpavanunx
 biTuTx suSupitxyalilx savxsavxrUpadalilxruva deVheVMdirxyAdigaLige
-sAkiSxyAgi savxsavxrUpadalilxruvaneMbudanunx shurxtiyu sAdhisikoTiTxde, idanenx
-samAKeyx `savxpiti' eMbuva hesariniMdalU yukitxyiMdalU sAdhiside-
-CAMdoVgayxdalilx'' savxmapiVtoVBavati tasAmxdeVnaM
-savxpitiVtAyxcakaSxteV eMdu heVLidaMte`savxpiti' eMba hesaru
+sAkiSxyAgi savxsavxrUpadalilx\-ruvaneMbudanunx shurxtiyu sAdhisikoTiTxde, idanenx
+samAKeyx `savxpiti' eMbuva hesari\-niMdalU yukitxyiMdalU sAdhiside-
+``CAMdoVgayxdalilx'' savxmapiVtoVBavati \break tasAmxdeVnaM
+savxpitiVtAyxcakaSxteV eMdu heVLidaMte `savxpiti' eMba hesaru
 savxpanxdedxMdu savaRsamamxtavAgide, yAvudariMda IjiVvanu tananx
 savxrUpadalilx layavAguvano EkavAguvanoV, adariMda Itanu `savxpiti'
 eMdu saMsakxqqtaBASeyalilx heVLuvudu. idariMda sAvxBAvikavAda tananx
 AtamxsavxrUpadalilx I niderxyalilxruvaneMdu
-athaRvusiguvudu,\textbf(yukitxyeVneMdare:-) upAdhiya upasaMhAravu
-jiVvAtamxnalilx kANutitxruva saMsAra rUpavanunx
+athaRvu\-siguvudu, \textbf(yukitxyeVneMdare:-) upAdhiya upasaMhAravu
+jiVvAtamxnalilx kANu\-titxruva saMsAra rUpavanunx
 alalxgaLeyavudakAkxgiyeV, vAgAdi iMdirxyagaLeMba upAdhi saMbaMdadiMda
-jAgarxtitxnalUlx savxpanxdalUlx suKaduHKarUpavAda saMsAravuLaLxvanaMte
-toVrutatxlidadxnu, avugaLu suSupitxyalilx aDagi hoVguvudariMda Atamxnu
+jAgarxtitxnalUlx savxpanxdalUlx suKaduHKarUpavAda saMsAra\-vuLaLxvanaMte
+toVrutatxlidadxnu, avugaLu suSupitxyalilx aDagi hoVguvudariMda \-Atamxnu
 saMsAriyalalxveMdu savxBAvasithxtiyukANuvudu, upAdhigaLa
-saMbaMdhavidadxre saMsAra , ilalxvAdare ilalxveMbudeV anavxya
-vayxtireVkagaLeMba yukitx || ``tAni tadAgaqNAhxti atheYtatf puruSaH
+saMbaMdha\-vidadxre saMsAra , ilalxvAdare ilalxveMbudeV anavxya
+vayxtireVkagaLeMba yukitx || ``tAni \-tadAgaqNAhxti atheYtatf puruSaH
 savxpiti........ gaqhiVtamana: eMbuva shurxtiya sArAthaRvanunx
 tiLisidAdxyitu. Atamxna savxBAvavu saMsAriyalalxda shudadhx
-sacicxdAnaMda rUpaveMdu supitxparxshenxyiMdabaMda adhaRvu.jAgara,
-savxpanx. suSusitxyeMbuva avasAthxtarxyvelalxvU ajAcnxnigaLa
+sacicxdAnaMda rUpa\-veMdu supitxparxshenxyiMdabaMda adhaRvu.jAgara,
+savxpanx. suSusitxyeMbuva avasAthxtarxy\-velalxvU ajAcnxnigaLa
 daqSiTxyiMda kalipxtavAdadudx paramAthaRvalalx, malagidadxnu,
-savxpanxvanunx kANutitxruvanu. edadxnu eMdu ajAcnxna rAtirxyalilx malagida
+savxpanx\-vanunx kANutitxruvanu. edadxnu eMdu ajAcnxna rAtirxyalilx malagida
 pArxNigaLa kalapxne ivu, nijavalalx, jitatxda ajAcnxnavoMdaralelx I
-janaru muLugidudx duHKapaDutatxliruvaru, digf BArxMtiyiMda Avarisida
+janaru muLugidudx duHKapaDutatxliru\-varu, digf BArxMtiyiMda Avarisida
 citatxvuLaLx pathika hAdihoVkanu sariyAda mAgaRvanunx kANade
 duHKisuvaMte Itanu saMsAra mAgaRdalilx duHKisuvanu I riVtiyAgi
 saMsAraparxpaMcavelalxvU satayxvalalx mitheyxyeMbudanunx savxrasavAgi
-savxSaTxpaDisalu shurxtiyu mahArAjAdi loVkagaLanunx savxpanxmayavAgi
+savxSaTx\-paDisalu shurxtiyu mahArAjAdi loVkagaLanunx savxpanxmayavAgi
 kANuvudanunx udAhAriside ``nayateyxYtatf savxpanxyXyA carati teV
-hAsayxloVkAH taduteVva mahArAjoVBavati uteVva
-mahAbArxhamxNa..... itAyxdi yAgi(baq -2 -1- 18). yadayxpi pANipeVSaNa
-mUlakaparxboVdhavuMTAda hiMdina katheyiMdaleV deVhAdigaLu
+hAsayxloVkAH taduteVva mahA\-rAjoVBavati uteVva
+mahAbArxhamxNa..... itAyxdi yAgi(baq -2 -1- 18). \-yadayxpi pANipeVSaNa
+mUlakaparxboVdhavuMTAda hiMdina katheyiMdaleV deVhAdi\-gaLu
 AtamxvalalxveMdu tiLidide. AdarU aSaTxriMdaleV Atamxna shudadhx
-savxBAvavu tiLidaMte Agalilalx, adariMda deVheVMdirxyagaLa tAdAtamxyXvu
-Atamxnige iruvudu satayxvalalxveMdu tiLidarU deVhavu mitheyxyeMdu
+savxBAvavu tiLi\-daMte Agalilalx, adariMda deVheVMdirxyagaLa tAdAtamxyXvu
+Atamxnige iruvudu satayx\-valalxveMdu tiLidarU deVhavu mitheyxyeMdu
 tiLiyalilalx, adariMda deVhasaMgarxvu Atamxnige irabahudeMdu shaMke
-barabahudu, tAkiRkaru deVhavu beVre Atamxnu beVreyeMdu BeVdavanunx
+barabahudu, tAkiRkaru deVhavu beVre Atamxnu beVre\-yeMdu BeVdavanunx
 aMgiVkarisidadxrU rAgadevxVSAdigaLanunx AtamxnalelxV iruvaveMdu
 opupxvaru, adanunx Atamxnige opapxbAradeMdu asaMgatavxvanunx tiLisalu
 shurxtiyu Iga yatinxside, yadayxpi suSupitxvicAradiMda idU tiLidide,
 AdarU, savxpanxvaqtitxyanunx avalaMbisi Atamxnalilx asaMgatavxvu heVge
 ? eMdu AkeSxpavu punaH huTuTxvadu, elAlx iMdirxyagaLa saMbaMdhavu
-savxpanxdalilx tapipxdadxrU suKaduHKagaLa saMbaMdhavu iruvudu
+savxpanxdalilx tapipxdadxrU suKaduHKagaLa \-saMbaMdhavu iru\-vudu
 Atamxnalilx kaMDide, adariMda Atamxnalilx saMsArasaMgavu
 tAtivxkavAgirabahudeMba shaMkeyu baruvudu, adanunx hoVgalADisalu
-savxpanx vicAravanunx tiLiside, savxpanxvelalxvU manasisxna vikAsaveV
-horatu beVreyalalx, adariMda asatayx, horagina iMdirxyagaLu
-lupatxvAgidadxrU savxpanxdalilx manasusx loVpavAgade iruvudu, AvAga
-mahArAjanaMteyU mahAbArxhamxNanaMteyU tanage anuBavavAguvavu. avelalx
+savxpanx vicAravanunx tiLiside, savxpanx\-velalxvU manasisxna vikAsaveV
+horatu beVreyalalx, adariMda asatayx, horagina \-iMdirxyagaLu
+lupatxvAgidadxrU savxpanxdalilx manasusx loVpavAgade iruvudu, \-AvAga
+mahArAjanaMteyU mahAbArxhamxNanaMteyU tanage anuBavavAguvavu. \-avelalx
 vAsatxvavalalx, alalxde maneyalilx elalxrU malagidadxrU
-savxpanxdalilx ivarelalx vanakekxhoVdaMte toVruvaru, hAgU
-ecacxrinalilx kaMDadedxlalxvU savxpanxdalilx kANade hoVguvavu, hAgeye
+savxpanxdalilx ivarelalx vanakekx \-hoVdaMte toVruvaru, hAgU
+ecacxrinalilx kaMDadedxlalxvU savxpanxdalilx kANade hoVgu\-vavu, hAgeye
 savxpanxdalilx kaMDadudx jAgaradalilx ilalxvAguvudu, hiVgeye eraDu
 avasethxgaLalUlx parxpaMcavu parasapxra dashegaLalilx
 mAyavAguvudariMda vitheyxyeMdu I shurxtiyiMda tiLiyuva muKAyxthaRvu.
@@ -305,12 +305,12 @@ A savxpanxvu deVhada oLage kANuvudariMda deVhada horage
 neDeyuvudalalx, Atatxnu savxtaH deVhavilalxdavanu avanutAneV neVra
 horage saMcarisuvavanalalx, hAgAdare! horagina giri samudArxdigaLu
 oLage heVge ? baMdaveMdare- utatxra jAgarxdadxsheyalilx kaMDiruva
-pavaRtAdigaLa vAsanegaLu citatxdalilxruvudariMda avugaLiMda Itanu
-savxpanxvanunx kANuvanu, I vAsanegaLu satayxveMdu tiLiyuvudu
-ajAcnxnada veYBavadiMda aSeTx, adariMda elalxvU asatayxvAdadadxriMda
+pavaRtAdigaLa vAsanegaLu citatx\-dalilxruvudariMda avugaLiMda Itanu
+savxpanxvanunx kANuvanu, I vAsanegaLu satayx\-veMdu tiLiyuvudu
+ajAcnxnada veYBavadiMda aSeTx, adariMda elalxvU asatayx\-vAdadadxriMda
 saMsAra saMbaMdhavU savxpanxdalUlx Atamxnige vAsatxvavalalxveMdU,
-asaMgoVhayxyaM puruSaH enunxva asaMga savxrUpaveV vAsatxvaveMdU
-tiLiyuvudu yukatx ||  
+\break asaMgoVhayxyaM puruSaH enunxva asaMga savxrUpaveV vAsatxvaveMdU
+tiLiyu\-vudu yukatx.
 \end{artha}
 
 \begin{center}
@@ -322,15 +322,15 @@ tiLiyuvudu yukatx ||
 \begin{artha}
 deVhAdivayxtirikatx matutx shudadhxneMdu savxpanxdalilx hiMde
 tiLisidadxrU adivxtiVyatavx (adavxyatavx) AnaMdarUpagaLanunx
-suSupitxyalilx toVrisikoDalu ``atha yadAsuSupotxV Bavati ..... itAyxdiyiMda EvameVSa EtaceCxVteV  || 19 ||" nemaMtarxdiMda parxyatinxside. yadayxpidevxYtavu mitheyxyeMdu heVLidadxriMda
+suSupitxyalilx toVrisikoDalu ``atha yadA\-suSupotxV Bavati ..... itAyxdiyiMda EvameVSa EtaceCxVteV  || 19 ||" nemaMtarx\-diMda parxyatinxside. yadayxpidevxYtavu mitheyxyeMdu heVLidadxriMda
 adivxtiVyatavxvu Atamxnige toVriyeV toVruvudu. AdarU savxpanx-
-jAgaragaLalilx devxYtavu iruvudu kANuvudariMda satayxvAgideyeMba
+jAgaragaLalilx devxYtavu iruvudu kANuvu\-dariMda satayxvAgideyeMba
 shaMkege avakAshavide, adanunx nivArisalu ililx
-sapxSaTxpaDisuvudakAkxgi I suSupitx vicAravanunx tegedide. matutx
-daqshayxvAda parxpaMca (devxYta) mitheyxyAgali, darxSaTxvAda Atamxnige
-vAsatxvavAgiye daqshayxvanunx niVDuvudeMbuva darxSaTxqqtavxvu
+sapxSaTx\-paDisuvudakAkxgi I suSupitx vicAravanunx tegedide. matutx
+daqshayxvAda parxpaMca \break (devxYta) mitheyxyAgali, darxSaTxvAda Atamxnige
+vAsatxvavAgiye daqshayxvanunx niVDuvu\break deMbuva darxSaTxqqtavxvu
 irabahudu, hAgidadxre daqshayxvanunx aveVkiSxsi adariMda
-darxSaTxqqtavxvanunx heVLabeVkAguvudu, AvAga daqshayxvU
+darxSaTxqqtavx\-	vanunx heVLa\-beVkAguvudu, AvAga daqshayxvU
 vAsatxvavAgiyeV irabeVkAguvudeMba shaMkeyu barabahuvudu, adanunx
 nivArisalu I vicAravanunx mADide. `na yadA suSupotxV Bavati tadA nakasayxcanaveVda' eMdu heVLidadxriMda Atamxnige
 jAcnxnakataqRtavxvu aMdare jAcnxnavanunx mADikoLuLxvudeMbudeV
@@ -356,9 +356,9 @@ vAsatxvave alalx. saMbaMdhavelalx ajAcnxdiMda kalipxtavAdadudx.
 
 \begin{artha}
 suSupitxyalilx yAvakarxmadiMda I budidhxyeMba upAdhiyu
-layavAguvudeMdare nALadiMdakUDida kamalada mogegxyaMteyiruva
-haqdayakoVshavu shariVradoLage keLamuKavAgi aidu tUtugaLiMda
-kUDiruvudu, adariMda kadaMbakusumada keVsaradaMte nADigaLu horaTive A
+layavAguvu\-deMdare nALadiMdakUDida kamalada mogegxyaMteyiruva
+haqdayakoVshavu shariVra\-doLage keLamuKavAgi aidu tUtugaLiMda
+kUDiruvudu, adariMda kadaMba\-kusumada keVsaradaMte nADigaLu horaTive A
 mUlaka budidhxyu haqdayadiMda horaTu avugaLalilx nelasi savxpanxvanunx
 kANuvudu, adeV nADigaLiMda deVhada horaBAgadalUlx vAyxpisi
 jAgaradalilx bAhayxparxpaMcavanunx noVDutAtxne, tirugi hiMdakekx baMdu
@@ -405,37 +405,37 @@ jAgarAvasethxyalilx horage baMdaneMdu heVLuva utatxravu pAshinxkana
 BeVdaBarxmeyanunx nivArisuvudu, suSupitxyiMda edudx baMdaneMdu
 heVLuvudU saha pUNaR aKaMDa savxrUpanAda Atamxnige nijavAgi salalxdu,
 adariMda budidhxmuMtAda upAdhigaLa mahimeyiMda uMTAda
-BarxmemAtarxveMdu tiLiyabeVku ||
+BarxmemAtarxveMdu tiLiyabeVku.
 \end{artha}
 
 \begin{artha}
 athavA suSupitxyalilx ceYtanayxrUpanAda Atamxnige asaMgatavxvanunx
-savaRsaMbaMdhashUnayxteyanunx toVrisi IvAga ELuva kAladalilx
-jagatAkxraNavAda A Barxhamxvasutxvina aBeVdavanunx heVLalu
-`sayathoVNaRnABi: {\rm ---} -- itAyxdishurxtiyu baMdide eMdu tAtapxyaR,
+savaRsaMbaMdha\-shUnayxteyanunx toVrisi IvAga ELuva kAladalilx
+jagatAkxraNavAda A barxhamx\-vasutxvina aBeVdavanunx heVLalu
+`sayathoVNaRnABi: {\rm ---} itAyxdishurxtiyu baMdide eMdu tAtapxyaR,
 jagatutx vAsatxvavAgilalxvAdadxriMda barxhamxnige (adavxyatavxvu)
 adivxtiVyatavxvU hoMduvudu. elAlx I daqshayx parxcaMcavu ajAjxnadiMda
-huTiTxkoMDiruvudariMda savxpanxparxpaMcadaMte paramAthaRvalalx,
-parxpaMcavu heVge ajAcnxna\-diMda huTiTxteMbudAgi niNaRyisuvudeMdu
-keVLidare-- I parxpaMcavu shasha\-viSANa (moladakoMbinaMte) asatatxlalx,
-asatAtxdare janamxveVbAradu, barxhamxnaMte \-satUtx alalx, satAtxdare
+huTiTxkoMDiruvu\-dariMda savxpanxparxpaMcadaMte paramAthaRvalalx,
+parxpaMcavu heVge ajAcnxna\-diMda huTiTx\-teMbudAgi niNaRyisuvudeMdu
+keVLidare-- I parxpaMcavu shasha\-viSANa (molada\-koMbinaMte) asatatxlalx,
+asatAtxdare janamxveVbAradu, barxhamxnaMte satUtx alalx, \-satAtxdare
 yAvAgalU iruvudariMda janamxvu baruvudeV ilalx, Adare sadasadf
 vilakaSxNa anivaRcaniVya, satetxMdU, asatetxMdU heVLalu
-baruvudilalx. niviRkAravAda ceVtanakekx vikAraveV
+baruvudilalx. niviRkAravAda \-ceVtanakekx vikAraveV
 baruvudilalx. adariMda ajAcnxnadiMda toVruva parxpaMcada huTuTx
 ajAcnxnadiMdaleV Agide.
 \end{artha}
 
 \begin{artha}
 yAvatAkiRkaru saqSiTxyanunx vAsatxvaveMdu heVLuvaroV, avaru saqSiTxge
-mUlakAraNa (upAdAna)veVneMbudanunx heVLabeVku. parxdhAna
-(parxkaqti)yeMdu heVLuva savxtaMtarx jaDa shakitxyeMdAgali,
-paramANugaLeMdAgali heVLuvalilx parxvaqtitxyanunxMTu mADuva matotxMdu
-ceVtana parxvataRkaveMduheVLabeVku, adu IshavxraneV eMdare avanu
-yAriMda perxVritanAguvaneMdu heVLabeVkAguvudu, parxLayadalilx kAma
-kamARdigaLu layavAgiruvudariMda avugaLu perxVrakavAgiveyeMdu heVLalu
+\break mUlakAraNa (upAdAna) veVneMbudanunx heVLabeVku. parxdhAna
+(parxkaqti) yeMdu heVLuva savxtaMtarx jaDa shakitxyeMdAgali,
+paramANugaLeMdAgali heVLuvalilx parxvaqtitx\-yanunxMTu mADuva matotxMdu
+ceVtana parxvataRkaveMduheVLabeVku, adu \break	 IshavxraneV eMdare avanu
+yAriMda perxVritanAguvaneMdu heVLabeVkAguvudu, \break parxLayadalilx kAma
+kamARdigaLu layavAgiruvudariMda avugaLu perxVrakavAgive\-yeMdu heVLalu
 shakayxvilalx, Ishavxrana shakitxyeV
-niyAmakaveMdare. adUjaDavAdadxriMda adanunx yAru niyamisuvaru ?
+niyAmakaveMdare. adUjaDavAdadx\-riMda adanunx yAru niyamisuvaru ?
 adariMda vicAramADade idadxre elalxvU cenAnxgide enunxvaMte
 avicAritaramaNiVyaveMdU saqSiTxyanunx ajAcnxnadiMda kalipxta veMdu
 heVLuva \-sidAdhxnatxveV sariyAdadudx, iMtaha saqSiTxyanunx Eke ?
@@ -468,33 +468,33 @@ kalipxtavalalxveMbudeV visheVSavu ||
 \begin{artha}
 jagatitxge saqSiTx. sithxti. layagaLu parxtikaSxNadalUlx AgutatxleV
 iruvudariMda elalxvU namamx ajAcnxna mAtarxveV AgiruvudariMda
-ivugaLalilx vAsatxvavAgi karxmavilalx, oMdAda meVle
+ivugaLalilx vAsatxvavAgi karxmavilalx, \-oMdAda meVle
 oMdeMbakarxmavilalx, mUlAjAcnxnadiMda parxtayxgAtamxnu (shudadhx
 cidUrxpanu) pArxNa, keSxVtarxjacnx (jiVva) ivugaLarUpavanunx
-tALiruvanu, A Atamxnu savxtaH savxrUpadalilx parabarxhamxveV. A
-parabarxhamxda upaniSatutx (rahasayx)veVveMdare idu-`tasoyxVpaniSatf'
+tALiruvanu, A Atamxnu savxtaH savxrUpadalilx \-parabarxhamxveV. A
+parabarxhamxda upaniSatutx (rahasayx) veVveMdare idu-`tasoyxVpaniSatf'
 eMdu shurxtiyalilxruva upaniSatetxMbapadakekx ililx rahasayx veMdathaR,
-barxhamxna nAma rahasayxvAgide. adanunx jAcnxnakAkxgiyU upAsanegAgiyU
-kalipxsi heVLide `satayxsayxsatayxM' eMbudeV adara hesaru  idu
-barxhamxvanunx boVdhisuvudu, adakekx athaRveVneMbudanunx shurxtiyu
+barxhamxna nAma \-rahasayxvAgide. adanunx jAcnxnakAkxgiyU upAsanegAgiyU
+kalipxsi heVLide `satayx\-sayxsatayxM' eMbudeV adara hesaru  idu
+barxhamxvanunx boVdhisuvudu, adakekx athaRveV\-neMbudanunx shurxtiyu
 `pArxNwveY satayxM teVSA meVSa satayxmf' eMdu
-vAyxKAyxniside. adaraathaR:- pArxNagaLu meVlemxle satayxvAgi
+vAyxKAyxniside. adara athaR:- pArxNagaLu meVlemxle satayxvAgi
 kANuvudariMda satayx, vasutxta: barxhamxveV satayx(paramAthaR)
-yAvatUtx aLiyadeyiruvudu, heVgeMdare? shariVravu satayxvalalx, adu
+yAvatUtx aLiyadeyiruvudu, heVgeMdare? shariVravu satayx\-valalx, adu
 huTiTxkoMDu oMdeVjanamxdalilx nAshavAguvudu, adare
 sUkaSxmXshariVrakekx seVrida liMgashariVravAgiruva I pArxNavu
 (muKayxpArxNa) matutx iMdirxyagaLU aMtariMdirxya, I elalxvU
-moVkaSxpayaRMta sithxravAgiruvudariMda satayxveMdu heVLalapxTiTxve,
+moVkaSxpayaRMta sithxravAgiruvudariMda satayxveMdu \-heVLalapxTiTxve,
 ``tadApiVteVH saMsAravayxpa deVshAtf'' eMdu
-barxhamxsUtarxkArarU AcAyaRrU moVkaSxpayaRMta
-sUkaSxmXshariVravusithxraveMdu heVLiruvaru.moVkaSxvAdarU kiVSxNavAgade
+barxhamxsUtarxkArarU \break AcAyaRrU moVkaSxpayaRMta
+sUkaSxmXshariVravusithxraveMdu heVLiruvaru. moVkaSx\-vAdarU kiVSxNavAgade
 niMtiruva AtamxvoMdeV (barxhamxvoMdeV) satayxkUkx satayxveMdu
 heVLiruvudu.  
 \end{artha}
 
 \begin{artha}
 hiMde ajAta shaturxvu bAlAkige satayxkukx satayxvAda tatavxvanunx
-upadeVshisiruvanu. ililxyU I parxsaMgadalilx samasatxveVdAMta
+upadeVshisi\-ruvanu. ililxyU I parxsaMgadalilx samasatxveVdAMta
 shAsatxrXda tAtavxyaRvanunx I riVtiyAgi nirUpisiruvudu.
 \end{artha}
 
@@ -503,40 +503,40 @@ shAsatxrXda tAtavxyaRvanunx I riVtiyAgi nirUpisiruvudu.
 
 \begin{artha}
 veVdAMta shAsatxrXda vicArakekx muMce baruvashaMshayagaLu ivu,
-AtamxneMdare avanu saMsAri jiVvaveMdeV athaRvoV ? athavA
-jiVvanU(asaMsAri) IshavxranU eraDU eMdo ? A IshavxranU jiVvAtamxnige
-BinenxYsiruvanoV ? athavA BinenxYsilalxvo? aBeVdavidadxrU barxhamx
-nAnArasa (rUpa)vAgiruvudeMdu heVLuvudo athavA adu
-Ekarasavo(EkarUpavAgiruvudo) hiVge opipxdare pararu ApAdisuva
-viroVdhavu idaralilx ideyo ? athavA ilalxvoV ? I bageyAgi saMshayagaLu huTuTxvavu|
+AtamxneMdare avanu saMsAri jiVvaveMdeV athaRvoV? athavA
+jiVvanU (asaMsAri) IshavxranU eraDU eMdo? A IshavxranU jiVvAtamxnige
+BinenxYsiruvanoV? athavA BinenxYsilalxvo? aBeVdavidadxrU barxhamx
+nAnArasa (rUpa) vAgiruvudeMdu heVLuvudo athavA adu
+Ekarasavo (EkarUpavAgiruvudo) hiVge opipxdare pararu ApAdisuva
+viroVdhavu idaralilx ideyo? athavA ilalxvoV? I bageyAgi saMshayagaLu huTuTxvavu.
 \end{artha}
 
 \section*{parxthama pUvaRpakaSxdasAra}
 
 \begin{artha}
 I meVle heVLida shurxtiyu suSupitxyalilx malagidadx saMsAri
-jiVvAtamxniMdale ecacxrinalilx pArxNwdigaLu huTuTxvaveMdu
+jiVvAtamxniMdale \break ecacxrinalilx pArxNwdigaLu huTuTxvaveMdu
 heVLidadxriMda jiVvAtamxneV iruvanu avanige beVreyAgi Ishavxranilalx,
 meYteVrxyiVbArxhamxNadalUlx `AtAmx vA areVdarxSaTxvayxH' eMdu heVLida
 Atamxnu patimuMtAda pirxyavasutxgaLa saMbaMdapaTaTxvaneMdu
 upakarxmadalilx kANuvudariMda saMsAri yAda jiVvAtamxneV`darxSaTxvayx'
-eMdu heVLalapxTiTxruvanu. Itanu mukitxdasheyalilx
-asaMsAriyAgutAtxneMdu heVLuvudakekx Aguvudilalx savxBAvavu
+eMdu heVLalapxTiTxruvanu. \-Itanu mukitxdasheyalilx
+asaMsAriyAgutAtxneMdu heVLuvudakekx Aguvudilalx \break savxBAvavu
 badalAguvudeMbudu elilxyU kANuvudilalx. sAMKAyxdigaLU saha
 aneVkayukitxgaLiMda Ishavxranu ilalxveMdu sAdhisuvaru. adariMda
 jiVvAtamxnigU beVreyAgi IshavxraneMbuvanu ilalx eMdu
-pUvaRpakaSx. IshavxranidAdxne sidAdhxMtadasAra aneVka shurxtigaLu
-idara bagegx  AdhAravAgive. yAravashadalilx I elAlx jagatutx ideyoV,
-yAvanu savaRjacnx savaRvitf. AgiruvanoV, yAvanu hasivu bAyArike
+pUvaRpakaSx. IshavxranidAdxne sidAdhxMtada\-sAra aneVka shurxtigaLu
+idara bagegx  AdhAravAgive. yAravashadalilx I elAlx \-jagatutx ideyoV,
+yAvanu savaRjacnx savaRvitf. AgiruvanoV, yAvanu hasivu \break bAyArike
 itAyxdi saMsAra vilalxdavanoV, yAvanu paqthiviV modalAda
-tatavxgaLalilx savaRniyA makanAgi aMtayARmiyeMdu heVLalapxDuvanoV
-aMtahaIshavxranu idAdxneMbudanunx, muMDaka, CAMdoVgayx baqhadAraNayxka
-vAkayxgaLu heVLutitxve. ivugaLanunx avalaMbisi Ishavxranu idAdxneMdu
+tatavx\-gaLalilx savaRniyA makanAgi aMtayARmiyeMdu heVLalapxDuvanoV
+aMtaha\break Ishavxranu idAdxneMbudanunx, muMDaka, CAMdoVgayx baqhadAraNayxka
+vAkayxgaLu heVLu\-titxve. ivugaLanunx avalaMbisi Ishavxranu idAdxneMdu
 tiLida meVle pArxNAdivasutxgaLa utapxtitxyu jiVvAtamxniMda
 Agilalx. IshavxraniMdaleV Agiruvudu. ``satA
 swmayxtadAsaMpanonxVBavti'' eMdu CAMdoVgayxdalilx suSupitxkAladalilx
-barxhamxvoMdeV uLidu kANuvudeMdu heVLiruvudariMda jagatitxna saqSiTxyU
-ajAcnxtavAda barxhamxniMdaleV AguvudeMdu heVLuvudeVyukatx. aMtaH
+barxhamxvoMdeV \-uLidu kANuvudeMdu heVLiruvudariMda jagatitxna saqSiTxyU
+ajAcnxtavAda barxhamx\-niMdaleV AguvudeMdu heVLuvudeVyukatx. aMtaH
 karaNAdi upAdhi saqSiTxyiMda vishavx teYjasa rUpagaLu baruva mogaleV
 idadx AtamxniMda jagatf saqSiTxyAyiteMdu heVLuvudu nAyxyavAgide.
 \end{artha}
@@ -544,7 +544,7 @@ idadx AtamxniMda jagatf saqSiTxyAyiteMdu heVLuvudu nAyxyavAgide.
 
 \begin{artha}
 sAkASxtakxrisikoLaLxbeVkAdadudx paramAtamxnanenxV horatu
-jiVvAtamxnananxlalx, `idaMsavaRMyadaya mAtAmx' eMdu savaRvu
+jiVvAtamxnananxlalx, `idaM savaRM yadaya mAtAmx' eMdu savaRvu
 AtamxvAgiruvanu paramAtamxneV jiVvanalalx, adariMda upakarxmadalilx
 saMsAriyanunx heVLiruvudu jiVva paramAtamxra nijasavxrUpavu oMdeV eMdu
 aBeVdadiMda tiLisuvudakAkxgiye, jagatatxnunx saqSiTxsuva sAmathaRyxvu
@@ -557,9 +557,9 @@ IshavxranigeV horatu jiVvarige ilalxveMbudu sapxSaTx.
 
 \begin{artha}
 seVshavxrasAMKayxrAda yoVgigaLU tAkiRkarU saha jiVveVshavxrara
-BeVdavanunx heVLuvaru, adariMda Ishavxrananunx jiVvAtamxnu
+BeVdavanunx \-heVLuvaru, adariMda Ishavxrananunx jiVvAtamxnu
 pUjisabeVku. idanunx biTuTx `ahaMbarxhamx' eMdu tiLiyuvalilx
-patitanAguvanu. sidAdhxnatx--`tatasxqqSATxyX tadeVvAnupArxvishatf'
+patitanAguvanu. sidAdhxnatx--`tatasxqqSATxyX tadeVvAnu\-pArxvishatf'
 itAyxdishurxtigaLiMda saqSiTxmADida IshavxraneV I jagatitxnalilx
 shariVragaLalilx parxveVshamADuvaneMdu keVLibaruvudariMda. tatavxtaH
 jiVveVshavxraralilx BeVdaviruvudilalx, maMtarxbArxhamxNagaLa
@@ -571,17 +571,17 @@ vAkayxgaLu I jAtiyavu aneVkavAgive. adariMda BeVda vAsatxvavalalx.
 
 
 \begin{artha}
-jiVvAtamxnu barxhamxnavikAra pariNAma adariMda barxhamxveMbudu aneVka rUpavAgiruvudu, barxhamx saqSiTxsi anaMtara jiVvarUpadiMda parxveVshisuvudu, jiVvarUpadalelxV shariVragaLalilx parxveVshisi toVruvudu, jiVvareV  saMsArigaLu barxhamxvalalx, jiVvarigU barxhamxnigU BeVdavU aBeVdavU eraDU ide, baMdha moVkaSxgaLa vayxvasethxyU I matadalilx baruvudu -- eMdu mUraneV pUvaRpakaSxvu .
+jiVvAtamxnu barxhamxnavikAra pariNAma adariMda barxhamxveMbudu aneVka rUpavAgi\-ruvudu, barxhamx saqSiTxsi anaMtara jiVvarUpadiMda parxveVshisuvudu, jiVvarUpadalelxV shariVragaLalilx parxveVshisi toVruvudu, jiVvareV  saMsArigaLu barxhamxvalalx, jiVvarigU barxhamxnigU BeVdavU aBeVdavU eraDU ide, baMdha moVkaSxgaLa vayxvasethxyU I matadalilx baruvudu -- eMdu mUraneV pUvaRpakaSxvu .
 \end{artha}
 
 
 \begin{artha}
 sidAdhxMta-- idu sariyalalx, yakatxvAgilalx, barxhamxnige yAva
-riVtiyalUlx pariNAmavilalx, BUmiyalilxruva Eka deVshavAda maNuNx
-gaDigeyAgabahudu, aMdare BUmiyalilxruva maNaNxnunx beVreyAgi tegedu
-adariMda gaDige mADabahudu. AvAga maqtitxna pariNAma BUmiya oMdu
-BAgada pariNAmavAguvudu.hAge parabarxhamxda oMdu aMshavAgi jiVva
-pariNAmavAyiteMdu heVLalAgadu, niravayava vAdadxriMda barxhamxda oMdu
+riVtiyalUlx \break pariNAmavilalx, BUmiyalilxruva Eka deVshavAda maNuNx
+gaDigeyAgabahudu, \-aMdare BUmiyalilxruva maNaNxnunx beVreyAgi tegedu
+adariMda gaDige mADa\-bahudu. AvAga maqtitxna pariNAma BUmiya oMdu
+BAgada pariNAmavAgu\-vudu. hAge parabarxhamxda oMdu aMshavAgi jiVva
+pariNAmavAyiteMdu heVLa\-lAgadu, niravayava vAdadxriMda barxhamxda oMdu
 aMsha pariNAmahoMditeMdu heVLaluavakAshavilalx.
 \end{artha}
 
@@ -599,7 +599,7 @@ AdudariMda I mUru riVtiyalUlx barxhamxvikAravAguvudalalx.
 
 \begin{artha}
 visuPxliMga shurxtiyaMte barxhamxna aMshaveV jiVva veMdAdare adu
-saMsAradalilxruvudAdare barxhamxna oMdu BAgavu BaganxvAguvudariMda
+saMsAradalilx\-ruvudAdare barxhamxna oMdu BAgavu BaganxvAguvudariMda
 suPxTisuvudariMda barxhamxveVvarxNadiMda kUDitu, AdAga `akAya
 mavarxNaM' eMdu varxNavilalxdedxMdu heVLuva shurxtiviroVdhavu
 baruvudu. AdudariMda savxpanxdalilx kANuva saMsAradaMte jiVvara
@@ -616,10 +616,10 @@ BinanxBinanxveMdu tiLisuvudakakxlalx.
 \begin{artha}
 beMkiyakiDiyu huTuTxvudakekx modalu beMkiye Agide, adaraMte jiVvaru
 huTuTxvudakekx modalu paramAtamxne Agiruvaru. beVreyAgiralilalx,
-upAdhiyiMda BinenxYsida jiVvaru BinanxreMbudu keVvala BArxMti. idu
-`tatavxmasi' eMba upadeVshadiMda baruva barxhAmxhamasimx eMba
-barxhAmxtamx sAkaSxtAkxradiMda hoVguvudu, idakokxMdu pArxciVna
-udAharaNe- obabxrAjaputarxnu parxbalavAyxdhiyiMda hucacxnAda,
+upAdhi\-yiMda BinenxYsida jiVvaru BinanxreMbudu keVvala BArxMti. idu
+`tatavxmasi' eMba upadeVsha\-diMda baruva barxhAmxhamasimx eMba
+barxhAmxtamx sAkaSxtAkxradiMda hoVguvudu, \break idakokxMdu pArxciVna
+udAharaNe- obabxrAjaputarxnu parxbalavAyxdhiyiMda hucacx\-nAda,
 alalxlilx ODADutAtx kADige hoVdaalilx beVDaru I rAjakumArananunx
 noVDi kanikaradiMda karetaMdu tamamx biVDinalelx auSadhavanunxkoTuTx
 upacarisidaru, aneVkavaSaRkAla upacAradiMda guNahoMdi alilxye idudx
@@ -633,17 +633,17 @@ rAjakumAraneMdeV tiLidanu.
 \end{artha}
 
 \begin{artha}
-adaraMte(ajAcnxnadasheyalilx jiVvanu barxhamxveV AgidadxrU tananx
-nijasavxrUpavanunx tiLiyadeV idudx apotxVpadeVshadiMda tAnu
+adaraMte (ajAcnxnadasheyalilx jiVvanu barxhamxveV AgidadxrU tananx
+nijasavxrUpa\-vanunx tiLiyadeV idudx apotxVpadeVshadiMda tAnu
 barxhamxneV paramAtamxne, saMsAriyalalx eMdu tiLiyuvanu jiVvatavxBArxMtiyu
 adariMda hoVguvudu) barxhamxveV avideyxyiMda deVhadalilx parxtibiMbisi
-jiVvaneMdu Agi rAgadevxVSAdidoVSagaLiMda puNayxpApakamaRgaLanunx mADi
+jiVvaneMdu Agi rAgadevxVSAdidoVSagaLiMda puNayxpApa\-kamaRgaLanunx mADi
 janana maraNwdigaLanunx tanage AgutitxruvaMte
-kANuvudu.nitayxneYmititxta kamaRgaLanunx Acarisi adara paripAkadiMda
-rAgAdi doVSagaLu hoVgutitxralu gurushAsotxrXpadeVshadiMda tananx
-barxhamxsavxrUpavanunx tAneV kANuvudu. adariMda jiVvanumxkitxyanunx
-hoMdi tananx saMsAra baMdhavanunx kANade baMdhavu asatayxveMdu aritu
-EkarUpavAgi uLiyutatxde. `apUvaRmanaparamf' itAyxdishurxtiyU itAyxdi
+kANuvudu. nitayx\-neYmititxta kamaRgaLanunx Acarisi adara paripAkadiMda
+rAgAdi doVSagaLu hoVgu\-titxralu gurushAsotxrXpadeVshadiMda tananx
+barxhamxsavxrUpavanunx tAneV kANuvudu. ada\-riMda jiVvanumxkitxyanunx
+hoMdi tananx saMsAra baMdhavanunx kANade baMdhavu asatayx\-veMdu aritu
+EkarUpavAgi uLiyutatxde. `apUvaRmanaparamf' itAyxdishurxti\-yU itAyxdi
 shurxtigaLu sacicxdAnaMda rUpa oMdeV Agi EkarasavAgideyeMdu
 adivxtiVyaveMdU, BeVdavilalxdedxMdu tiLisuvavu.
 \end{artha}
