missing footnote added

--- a/003/003.tex
+++ b/003/003.tex
@@ -1677,7 +1677,7 @@ A pArxNagaLU kUDa savaRsAdhAraNavAgive. AdarU (AdhAyxtimxka) shariVradalilx avu 
 
 \footnotetext[4]{GaTAkAsha, karakAkAsha, maThAkAshaveMdare 
 adaroLagiruva, Cidarx, ToLuLx, oLaparxdeVshaveMdathaR. avugaLige 
-nijavAgi huTiTxlalx. GaTa, maTha nimARNavAdare avu huTiTx ?????????????/ eMbaMte Atamxnu AkAshadaMte shariVreVMdirxyagaLa huTiTxniMda huTiTxdaMte toVruvanu, nijavAgi huTiTxlalxdavanu, adariMda nAshashaMkege avakAshavilalx.}
+nijavAgi huTiTxlalx. GaTa, maTha nimARNavAdare avu huTiTxve eMdeV kANuvudu nijavAgihuTiTxlalx, parxtayxkaSxvAgilalx eMbaMte Atamxnu AkAshadaMte shariVreVMdirxyagaLa huTiTxniMda huTiTxdaMte toVruvanu, nijavAgi huTiTxlalxdavanu, adariMda nAshashaMkege avakAshavilalx.}
 \begin{shl}
 pArxNAdijanamxnA jajeVcnx visuPxliMgeYyaRthA shiKiV |
 paramAtAmx\s pi jajeVcnx KaM\footnotemark[4] yathA kuMBAdijanamxBiH\hfill || 417 ||
